--- a/myproject/app/build.gradle
+++ b/myproject/app/build.gradle
@@ -10,6 +10,9 @@ repositories {
 dependencies {
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.98'
 
+    implementation 'org.springframework:spring-webmvc:5.3.39'
+
+
     testImplementation libs.junit.jupiter
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation libs.guava
