--- a/myproject/app/build.gradle
+++ b/myproject/app/build.gradle
@@ -13,6 +13,8 @@ dependencies {
 //    implementation 'com.mysql:mysql-connector-j:8.4.0'
     implementation 'javax.servlet:jstl:1.2'
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.782'
+    implementation 'org.mybatis:mybatis:3.5.19'
+    implementation 'org.apache.commons:commons-dbcp2:2.13.0'
 
     implementation libs.guava
     implementation libs.mysql.connector.j
