--- a/myproject/app/build.gradle
+++ b/myproject/app/build.gradle
@@ -1,29 +1,11 @@
 plugins {
-    id 'application'
     id 'java'
+    id 'org.springframework.boot' version '2.7.18'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-//    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.98'
-//    implementation 'org.springframework:spring-webmvc:5.3.39'
-//    implementation 'com.mysql:mysql-connector-j:8.4.0'
-    implementation 'javax.servlet:jstl:1.2'
-    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.782'
-    implementation 'org.mybatis:mybatis:3.5.19'
-    implementation 'org.apache.commons:commons-dbcp2:2.13.0'
-
-    implementation libs.guava
-    implementation libs.mysql.connector.j
-    implementation libs.spring.webmvc
-    implementation libs.tomcat.embed.jasper
-
-    testImplementation libs.junit.jupiter
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
+group = 'bitcamp'
+version = '0.0.1-SNAPSHOT'
 
 java {
     toolchain {
@@ -31,8 +13,41 @@ java {
     }
 }
 
-application {
-    mainClass = 'bitcamp.myapp.App'
+configurations {
+    compileOnly {
+        // annotationProcessor 로 설정된 의존 라이브러리는
+        // 컴파일 할 때만 적용하고, 배포파일(.jar)에 추가하지 않는다
+        extendsFrom annotationProcessor
+    }
+}
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'javax.servlet:jstl:1.2'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.782'
+
+    implementation libs.guava
+    runtimeOnly libs.mysql.connector.j
+    implementation libs.tomcat.embed.jasper
+
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
+//    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.2'
+//    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+//    compileOnly 'org.projectlombok:lombok'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+//    annotationProcessor 'org.projectlombok:lombok'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.3.2'
+//    testImplementation 'org.springframework.security:spring-security-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
