--- a/myproject/app/src/main/resources/application.properties
+++ b/myproject/app/src/main/resources/application.properties
@@ -1,3 +1,17 @@
 spring.application.name=myapp
 server.port=8888
 server.servlet.context-path=/
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://db-32e1ki-kr.vpc-pub-cdb.ntruss.com:3306/student-db
+spring.datasource.username=student
+spring.datasource.password=bitcamp123!@#
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=50MB
+
+#mybatis.mapper-locations=classpath:bitcamp/myapp/mapper/*Dao.xml
+mybatis.type-aliases-package=bitcamp.myapp.vo
+
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
