--- a/myproject/app/src/main/resources/application.properties
+++ b/myproject/app/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.servlet.multipart.max-request-size=50MB
 #mybatis.mapper-locations=classpath:bitcamp/myapp/mapper/*Dao.xml
 mybatis.type-aliases-package=bitcamp.myapp.vo
 
-spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
