--- a/myproject/app/build.gradle
+++ b/myproject/app/build.gradle
@@ -7,37 +7,23 @@ plugins {
 group = 'bitcamp'
 version = '0.0.1-SNAPSHOT'
 
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
-    }
-}
-
-configurations {
-    compileOnly {
-        // annotationProcessor 로 설정된 의존 라이브러리는
-        // 컴파일 할 때만 적용하고, 배포파일(.jar)에 추가하지 않는다
-        extendsFrom annotationProcessor
-    }
-}
-
 repositories {
-    mavenCentral()
+    mavenCentral() // https://repo.maven.apache.org/maven2/
 }
 
 dependencies {
-    implementation 'javax.servlet:jstl:1.2'
+
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.782'
 
     implementation libs.guava
-    runtimeOnly libs.mysql.connector.j
+    runtimeOnly libs.mysql.connectorj
 
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.2'
-    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -49,6 +35,22 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+configurations {
+    compileOnly {
+        // annotationProcessor 로 설정된 의존 라이브러리는
+        // 컴파일 할 때만 적용하고,
+        // 배포 파일(.jar)에 추가하지 않는다.
+        extendsFrom annotationProcessor
+    }
+}
+
 tasks.named('test') {
     useJUnitPlatform()
 }
+
