--- a/myproject/app/src/main/resources/application.properties
+++ b/myproject/app/src/main/resources/application.properties
@@ -16,3 +16,10 @@ mybatis.type-aliases-package=bitcamp.myapp
 # for development
 spring.web.resources.static-locations=file:src/main/resources/static
 spring.thymeleaf.prefix=file:src/main/resources/templates/
+
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.bitcamp.myapp=DEBUG
+logging.level.org.apache.ibatis=DEBUG
+
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %M - %msg%n
