--- a/myproject/app/src/main/resources/application.properties
+++ b/myproject/app/src/main/resources/application.properties
@@ -17,6 +17,10 @@ mybatis.type-aliases-package=bitcamp.myapp
 spring.web.resources.static-locations=file:src/main/resources/static
 spring.thymeleaf.prefix=file:src/main/resources/templates/
 
+# RSA Keys
+jwt.private.key=classpath:private.pem
+jwt.public.key=classpath:public.pem
+
 logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
 logging.level.bitcamp.myapp=DEBUG
